# RAGs

./: .gitignore  frag_0.py  import test.py  pyproject.toml  rag_.py  rag_workflow.ipynb  scratch_rag.ipynb  test.py  workflow-001.ipynb
core/base/rag/: rag_agent.py
core/base/vector_db/: base_vector_db.py
